fixing some landing page spacing

--- a/main.css
+++ b/main.css
@@ -154,7 +154,7 @@ a:hover {
     height: 100%; 
     display: flex; 
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
 }
@@ -256,6 +256,7 @@ a:hover {
   background-size: cover; 
   background-repeat: no-repeat;
   height: 50%; 
+  justify-content: center;
 }
 
 #sponsorLogos{
